--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,5 @@
-# فایل‌هایی که نباید به Docker Image کپی شوند
+# Files and directories to exclude from the Docker image
+# Do not copy these files to the Docker image
 node_modules
 npm-debug.log
 .git
