--- a/package.json
+++ b/package.json
@@ -1,14 +1,28 @@
 {
   "name": "humanize-text-api",
   "version": "1.0.0",
-  "description": "API سرور برای دیکشنری انسانی‌سازی متن فارسی",
+  "description": "API server for multi-language text humanization dictionary",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["persian", "dictionary", "humanize", "api"],
-  "author": "",
+  "keywords": [
+    "humanize",
+    "text-humanization",
+    "dictionary",
+    "api",
+    "multi-language",
+    "persian",
+    "english",
+    "spanish",
+    "portuguese",
+    "google-docs",
+    "google-apps-script",
+    "formal-to-casual",
+    "natural-language"
+  ],
+  "author": "xoxxel (https://serpify.dev)",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
