TextFlow v2.0.0 - Complete rebranding and feature upgrade
Major Changes:
- Rebranded from Humanize-Text to TextFlow
- API endpoint: /api/humanize -> /api/transform
- Response field: humanized -> result
- Custom dictionaries with MongoDB integration
- Multi-language support (EN, FA, ES, PT)

New Features:
- Custom dictionary CRUD operations
- Community-driven phrase collections
- Token-based authentication
- Dictionary sharing (public/private)
- Google Docs add-ons (Advanced + Simple)
- n8n integration examples

Documentation:
- Complete README.md (900+ lines)
- API-DOCUMENTATION.md
- CONTRIBUTING.md
- N8N-GUIDE.md
- Google Docs add-on guides

Deployment:
- Optimized Dockerfile
- docker-compose.yml
- Production-ready configuration
- Health checks and security

Version: 2.0.0

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,35 @@
 version: '3.8'
 
 services:
-  api:
-    build: .
+  textflow-api:
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    container_name: textflow-api
     ports:
       - "3000:3000"
     volumes:
       - ./dictionary:/app/dictionary
+      - ./custom-dictionaries:/app/custom-dictionaries
     restart: unless-stopped
     environment:
       - NODE_ENV=production
+      - PORT=3000
+      - Mongodb_url=${Mongodb_url}
+    env_file:
+      - .env
+    healthcheck:
+      test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000/api/dictionaries/list', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    networks:
+      - textflow-network
+    labels:
+      - "com.textflow.description=TextFlow API Server"
+      - "com.textflow.version=2.0.0"
+
+networks:
+  textflow-network:
+    driver: bridge
