--- a/.dockerignore
+++ b/.dockerignore
@@ -1,13 +1,59 @@
 # Files and directories to exclude from the Docker image
-# Do not copy these files to the Docker image
+
+# Dependencies
 node_modules
 npm-debug.log
+package-lock.json
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Git
 .git
 .gitignore
-README.md
-test-api.js
-add-on
-script.js
-script-add-word.js
-.env
+.gitattributes
+
+# Documentation
 *.md
+!README.md
+docs/
+
+# Add-ons and scripts
+add-on/
+script.js
+script-v1.js
+script-add-word.js
+test-api.js
+test*.js
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Docker
+Dockerfile
+docker-compose.yml
+.dockerignore
+captain-definition
+
+# Misc
+.cache/
+.temp/
+tmp/
