--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
-  "name": "humanize-text-api",
-  "version": "1.0.0",
-  "description": "API server for multi-language text humanization dictionary",
+  "name": "textflow-api",
+  "version": "2.0.0",
+  "description": "Powerful API for text transformation with community-driven dictionaries. Create, manage, and share custom phrase dictionaries across multiple languages.",
   "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xoxxel/TextFlow.git"
+  },
+  "homepage": "https://github.com/xoxxel/TextFlow#readme",
+  "bugs": {
+    "url": "https://github.com/xoxxel/TextFlow/issues"
+  },
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "keywords": [
-    "humanize",
-    "text-humanization",
-    "dictionary",
+    "textflow",
+    "text-transformation",
+    "dictionary-management",
+    "phrase-dictionary",
     "api",
     "multi-language",
     "persian",
@@ -18,15 +27,23 @@
     "spanish",
     "portuguese",
     "google-docs",
-    "google-apps-script",
-    "formal-to-casual",
-    "natural-language"
+    "rephrase",
+    "text-humanization",
+    "community-dictionary",
+    "custom-dictionary",
+    "automation",
+    "n8n",
+    "zapier"
   ],
   "author": "xoxxel (https://serpify.dev)",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "mongodb": "^7.0.0",
+    "pg": "^8.16.3",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
